--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ MarkupSafe==3.0.2
 numpy==2.2.3
 packaging==24.2
 pandas==2.2.3
+psycopg2==2.9.10
 pyogrio==0.10.0
 pyproj==3.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+PyYAML==6.0.2
 requests==2.32.3
 shapely==2.0.7
 six==1.17.0
